--- a/conf/php.ini
+++ b/conf/php.ini
@@ -4,7 +4,7 @@ display_errors = On
 display_startup_errors = On
 max_execution_time = 300
 max_input_vars = 4000
-memory_limit = 256M
+memory_limit = 128
 post_max_size = 512M
 upload_max_filesize = 512M
 
