--- a/conf/apache.conf
+++ b/conf/apache.conf
@@ -36,3 +36,6 @@ DocumentRoot "${GITPOD_REPO_ROOT}/${APACHE_DOCROOT}"
 
 # Include conf installed via apt-get
 IncludeOptional /etc/apache2/conf-enabled/*.conf
+
+# Change default timeout 
+TimeOut 600
