--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,10 +13,10 @@ ports:
 
 tasks:
   - command: wget -q https://github.com/PrestaShop/PrestaShop/releases/download/1.7.7.1/prestashop_1.7.7.1.zip
-  - command: unzip prestashop_1.7.7.1.zip -d ./public_html
+    command: unzip prestashop_1.7.7.1.zip -d ./public_html
   # WIP todo : lunch autoconfig
   # WIP todo : remove zip after install
-  - command: apache2ctl start # start Apache server
+    command: apache2ctl start # start Apache server
   
   # start MailHog (SMTP testing tool) 
   - command: mailhog -api-bind-addr 127.0.0.1:8025 -ui-bind-addr 127.0.0.1:8025 -smtp-bind-addr 127.0.0.1:1025
