--- a/conf/apache.conf
+++ b/conf/apache.conf
@@ -38,4 +38,5 @@ DocumentRoot "${GITPOD_REPO_ROOT}/${APACHE_DOCROOT}"
 IncludeOptional /etc/apache2/conf-enabled/*.conf
 
 # Change default timeout 
-TimeOut 60
+TimeOut 600
+KeepAliveTimeout 500
