--- a/conf/php.ini
+++ b/conf/php.ini
@@ -7,6 +7,7 @@ max_input_vars = 4000
 memory_limit = 256
 post_max_size = 256M
 upload_max_filesize = 512M
+TimeOut 600
 
 opcache.enable=1
 opcache.enable_cli=1
