--- a/conf/.htaccess
+++ b/conf/.htaccess
@@ -1,3 +1,3 @@
-php_value memory_limit 512M
-TimeOut 6000
-KeepAliveTimeout 5000
+# php_value memory_limit 512M
+# TimeOut 6000
+# KeepAliveTimeout 5000
