--- a/conf/php.ini
+++ b/conf/php.ini
@@ -2,9 +2,9 @@
 error_reporting = E_ALL
 display_errors = On
 display_startup_errors = On
-max_execution_time = 600
+max_execution_time = 350
 max_input_vars = 4000
-memory_limit = 256
+memory_limit = 256M
 post_max_size = 256M
 upload_max_filesize = 512M
 
