--- a/conf/php.ini
+++ b/conf/php.ini
@@ -2,12 +2,11 @@
 error_reporting = E_ALL
 display_errors = On
 display_startup_errors = On
-max_execution_time = 600
-max_input_vars = 400
-memory_limit = 256
+max_execution_time = 350
+max_input_vars = 4000
+memory_limit = 256M
 post_max_size = 256M
 upload_max_filesize = 512M
-TimeOut 600
 
 opcache.enable=1
 opcache.enable_cli=1
