--- a/conf/mysql.cnf
+++ b/conf/mysql.cnf
@@ -17,7 +17,7 @@ bind-address		= 127.0.0.1
 key_buffer_size		= 32M
 max_allowed_packet	= 132M
 thread_stack		= 192K
-thread_cache_size   = 16
+thread_cache_size   = 32M
 
 myisam-recover-options  = BACKUP
 query_cache_limit	    = 16M
