--- a/conf/client.cnf
+++ b/conf/client.cnf
@@ -1,10 +1,10 @@
 [client]
 host     = localhost
 user     = root
-password = root
+password = 
 socket   = /var/run/mysqld/mysqld.sock
 [mysql_upgrade]
 host     = localhost
 user     = root
-password = root
+password = 
 socket   = /var/run/mysqld/mysqld.sock
