--- a/conf/mysql.cnf
+++ b/conf/mysql.cnf
@@ -7,6 +7,8 @@ user		= gitpod
 pid-file	= /var/run/mysqld/mysqld.pid
 socket		= /var/run/mysqld/mysqld.sock
 port		= 3306
+security_opt:
+    - seccomp:unconfined
 basedir		= /usr
 datadir		= /workspace/mysql
 tmpdir		= /tmp
